迭代更新